--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,9 @@ th, td {
 .button {
     background: whitesmoke;
     color: black;
+    width: 30%;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 .underlined {
