--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 table {
-    background-color:aquamarine;
+    background-color:rgb(239, 231, 17);
     color: black;
     margin: 10px;
     border: 3px solid orchid;
@@ -54,7 +54,7 @@ body {
 }
 
 .table-header {
-    color: olivedrab;
+    color: rgb(115, 8, 203);
     text-decoration: underline;
 }
 
