--- a/styles.css
+++ b/styles.css
@@ -73,3 +73,31 @@ th, td {
 .center {
     text-align: center;
 }
+
+@keyframes rainbow {
+    0% {
+      color: #ff0000; /* Red */
+    }
+    16.66% {
+      color: #ff7f00; /* Orange */
+    }
+    33.33% {
+      color: #000000; /* Yellow */
+    }
+    49.99% {
+      color: #00ff00; /* Green */
+    }
+    66.66% {
+      color: #0000ff; /* Blue */
+    }
+    83.33% {
+      color: #4b0082; /* Indigo */
+    }
+    100% {
+      color: #9400d3; /* Violet */
+    }
+  }
+
+.colorful {
+    animation: rainbow 4s linear infinite;
+}
