--- a/styles.css
+++ b/styles.css
@@ -76,25 +76,25 @@ th, td {
 
 @keyframes rainbow {
     0% {
-      color: #ff0000; /* Red */
+      color: #ff0000;
     }
     16.66% {
-      color: #ff7f00; /* Orange */
+      color: #ff7f00;
     }
     33.33% {
-      color: #000000; /* Yellow */
+      color: #000000;
     }
     49.99% {
-      color: #00ff00; /* Green */
+      color: #00ff00;
     }
     66.66% {
-      color: #0000ff; /* Blue */
+      color: #0000ff;
     }
     83.33% {
-      color: #4b0082; /* Indigo */
+      color: #00f7ff;
     }
     100% {
-      color: #9400d3; /* Violet */
+      color: #ff0000;
     }
   }
 
