--- a/styles.css
+++ b/styles.css
@@ -102,7 +102,7 @@ th, td {
     animation: rainbow 4s linear infinite;
 }
 
-img {
+.image_1 {
     position: absolute;
     top:50%;
     right: 0;
@@ -110,4 +110,10 @@ img {
     display: block;
     margin: 0 auto;
     border: 3px solid black;
+}
+
+.image_2 {
+    position: absolute;
+    max-width: 100%;
+    height: auto;
   }
