--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@ table {
     background-color:rgb(239, 231, 17);
     color: black;
     border: 3px solid orchid;
+    width: 100%;
 }
 
 .background {
