--- a/styles.css
+++ b/styles.css
@@ -123,3 +123,9 @@ body {
 .black_bg {
     background-color: black;
 }
+
+.hacking {
+    width: 50%;
+    text-align: center;
+    border: 4px solid black;
+}
